add customCSS in config file

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -33,14 +33,13 @@ theme_color = "#41228e"
 [params.contact]
 enable = true
 form_action = "#"
+customCSS = ["assets/css/style.css"]
 [[params.plugins.css]]
 URL = "plugins/bootstrap/bootstrap.min.css"
 [[params.plugins.css]]
 URL = "plugins/slick/slick.css"
 [[params.plugins.css]]
 URL = "plugins/themify-icons/themify-icons.css"
-[[params.assets.css]]
-URL = "assets/css/style.css"
 [[params.plugins.js]]
 URL = "plugins/jQuery/jquery.min.js"
 [[params.plugins.js]]
