--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -30,7 +30,7 @@ home = "Home"
 logo = "images/logo.png"
 phone = "0678491075"
 theme_color = "#41228e"
-customCSS = ["assets/css/style.css"]
+customCSS = ["css/style.css"]
 [params.contact]
 enable = true
 form_action = "#"
