--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -1,6 +1,6 @@
 # banner
 banner:
-  title : "Hi! I’m <br> Christoher <br> UX designer"
+  title : "Bonjour! Je suis <br> Maxime <br> UI designer"
 
 # about
 about:
