--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -1,6 +1,6 @@
 # banner
 banner:
-  title : "Bonjour! Je suis <br> Maxime <br> UI designer"
+  title : "Bonjour! <br> Je suis Maxime <br> UI designer"
 
 # about
 about:
