--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -48,7 +48,12 @@ experience:
       duration : "Mar 2009 - Aug 2014"
       
     - logo : "images/experience/icon-1.png"
-      title : "Senior UI Designer"
+      title : "Webdesigner"
+      company : "THEMEFISHER"
+      duration : "Sep 2014 - Present"
+
+    - logo : "images/experience/icon-1.png"
+      title : "Webdesigner"
       company : "THEMEFISHER"
       duration : "Sep 2014 - Present"
 
