--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -24,7 +24,7 @@ address = "71 rue Jean Marin Naudin, France, 92220 Bagneux"
 author = "Maxime Larrouturou"
 copyright = "Copyrighht &copy; 2020"
 customCSS = ["css/style.css"]
-description = "This is meta description"
+description = "Venez découvrir mon travail en tant qu'UI Designer."
 email = "larrouturoumaxime@gmail.com"
 google_analitycs_id = "Your ID"
 home = "Home"
