--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -89,10 +89,9 @@ service:
   item:
     - title : "UI Design"
       icon : "ti-palette"
-      content : "Dans le cas d’une application Web, l’interface utilisateur (UI) est une interface web matérialisée par une interface graphique que l’on peut manipuler avec un navigateur Web. <br>
-L’UI est donc axée sur le design d’une interface graphique en s’appuyant sur des normes techniques permettant d’organiser les éléments textuels et graphiques d’une page web. Elle conditionne également la manière dont l’application ou le site internet sollicite les interactions des utilisateurs. Seulement, l’UI seule ne permet pas de répondre à toutes les attentes et problématiques des internautes"
+      content : "Dans le cas d’une application Web, l’interface utilisateur (UI) est une interface web matérialisée par une interface graphique que l’on peut manipuler avec un navigateur Web. L’UI est donc axée sur le design d’une interface graphique en s’appuyant sur des normes techniques permettant d’organiser les éléments textuels et graphiques d’une page web. Elle conditionne également la manière dont l’application ou le site internet sollicite les interactions des utilisateurs. Seulement, l’UI seule ne permet pas de répondre à toutes les attentes et problématiques des internautes"
       highlighted : false
-            academy : "source : www.anthedesign.fr"
+      academy : "source : www.anthedesign.fr"
 
     - title : "UX Design"
       icon : "ti-vector"
