--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -136,7 +136,9 @@ testimonial:
 clients_logo_slider:
   enable : true
   item:
-      
+    - logo : "images/clients-logo/client-logo-6.png"
+      URL : "http://www.lapupille.fr/"
+            
     - logo : "images/clients-logo/client-logo-6.png"
       URL : "http://www.lapupille.fr/"
       
