--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -5,7 +5,7 @@ banner:
 # about
 about:
   enable : true
-  content : "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur."
+  content : "L'UI Designer, ce trait d'union entre l'homme et la machine. C’est l’ensemble des outils qui vont nous permettre de dialoguer avec la machine. On retrouve les éléments indispensables afin de transcrire ce que nous voulons faire, dire ou ordonner à l’ordinateur en signe qu’il pourra comprendre : souris, clavier ou encore écran en sont les éléments de base. Comprendre cela, c’est accepter une vérité universelle : la machine ne parle pas le même language que nous."
   button:
     enable : true
     label : "En savoir plus"
