--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -153,5 +153,5 @@ clients_logo_slider:
 # blog
 blog:
   enable : true
-  title : "Blogs"
+  title : "Autres projets"
   # blog post comes from "content/blog" folder
