--- a/exampleSite/data/homepage.yml
+++ b/exampleSite/data/homepage.yml
@@ -140,22 +140,22 @@ clients_logo_slider:
       URL : "https://www.adobe.com/fr/creativecloud.html?gclid=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB&sdid=88X75SL1&mv=search&ef_id=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB:G:s&s_kwcid=AL!3085!3!275520168686!e!!g!!adobe%20cloud"
 
     - logo : "images/clients-logo/client-logo-2.png"
-      URL : "https://www.adobe.com/fr/creativecloud.html?gclid=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB&sdid=88X75SL1&mv=search&ef_id=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB:G:s&s_kwcid=AL!3085!3!275520168686!e!!g!!adobe%20cloud"
+      URL : "https://zeplin.io/"
 
     - logo : "images/clients-logo/client-logo-3.png"
-      URL : "https://www.adobe.com/fr/creativecloud.html?gclid=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB&sdid=88X75SL1&mv=search&ef_id=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB:G:s&s_kwcid=AL!3085!3!275520168686!e!!g!!adobe%20cloud" 
+      URL : "https://www.sketch.com/" 
     
     - logo : "images/clients-logo/client-logo-4.png"
-      URL : "https://www.adobe.com/fr/creativecloud.html?gclid=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB&sdid=88X75SL1&mv=search&ef_id=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB:G:s&s_kwcid=AL!3085!3!275520168686!e!!g!!adobe%20cloud"
+      URL : "https://www.figma.com/"
     
     - logo : "images/clients-logo/client-logo-5.png"
-      URL : "https://www.adobe.com/fr/creativecloud.html?gclid=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB&sdid=88X75SL1&mv=search&ef_id=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB:G:s&s_kwcid=AL!3085!3!275520168686!e!!g!!adobe%20cloud"
+      URL : "https://principleformac.com/"
       
     - logo : "images/clients-logo/client-logo-6.png"
-      URL : "https://www.adobe.com/fr/creativecloud.html?gclid=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB&sdid=88X75SL1&mv=search&ef_id=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB:G:s&s_kwcid=AL!3085!3!275520168686!e!!g!!adobe%20cloud"
+      URL : "https://www.framer.com/"
 
     - logo : "images/clients-logo/client-logo-7.png"
-      URL : "https://www.adobe.com/fr/creativecloud.html?gclid=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB&sdid=88X75SL1&mv=search&ef_id=Cj0KCQiA7aPyBRChARIsAJfWCgIo6rE9GtsxfErQaEeeJ6ShgZSzqhn-5w8_QC7-LerFJQAaH2IRAkMaApLsEALw_wcB:G:s&s_kwcid=AL!3085!3!275520168686!e!!g!!adobe%20cloud"
+      URL : "https://www.invisionapp.com/"
 
 # blog
 blog:
