--- a/exampleSite/data/portfolio.yml
+++ b/exampleSite/data/portfolio.yml
@@ -1,40 +1,85 @@
 # portfolio item
 item:
   - image : "images/portfolio/item-1.png"
-    project_url : "http://maximelarrouturou.netlify.com/portfolio/ReactMovies.md"
+    project_url : "https://www.behance.net/gallery/92079743/Redesign-home-page"
     category: "design"
       
   - image : "images/portfolio/item-2.png"
-    project_url : "#"
-    category: "branding"
-      
-  - image : "images/portfolio/item-3.png"
-    project_url : "http://examplesite.com"
-    category: "illustration"
-      
-  - image : "images/portfolio/item-5.png"
-    project_url : "#"
+    project_url : "https://www.behance.net/gallery/92078753/Redesign-profil-page"
     category: "design"
-      
-  - image : "images/portfolio/item-8.png"
-    project_url : "http://examplesite.com"
-    category: "illustration"
-      
-  - image : "images/portfolio/item-6.png"
-    project_url : "#"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/90616541/App-mobile-touch"
     category: "design"
-      
-  - image : "images/portfolio/item-1.png"
-    project_url : "http://examplesite.com"
-    category: "branding"
-      
-  - image : "images/portfolio/item-3.png"
-    project_url : "#"
-    category: "illustration"
-      
-  - image : "images/portfolio/item-7.png"
-    project_url : "http://examplesite.com"
-    category: "branding"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/89329979/Study-case-Reservation-Manager"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88778345/Redesign-Website-Dosemetrix"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88789643/Manufacture-of-custom-motorcycle-parts"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88778141/Transactionnel-mailing-Touch"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88777997/Landing-page-Touch"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88777265/Website-Touch-v2"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88773299/Personal-access-portal"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88767105/Access-portal-Survey-experience"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88758331/CEREQ-Generation-Mobile"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88762785/research-redesign-back-office"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88760507/Bi-color"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88760115/Infographie"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88759921/WAYS-album-clutch"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88759513/Design-System"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88757345/Survey-experience"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88756047/Website-Touch-v3"
+    category: "design"
+
+  - image : "images/portfolio/item-2.png"
+    project_url : "https://www.behance.net/gallery/88755157/Logotype-Poupi-Motors"
+    category: "design"
+     
 
 
 # client logo slider
