--- a/exampleSite/data/portfolio.yml
+++ b/exampleSite/data/portfolio.yml
@@ -40,21 +40,21 @@ item:
     project_url : "https://www.behance.net/gallery/88773299/Personal-access-portal"
     category: "design"
 
-  - image : "images/portfolio/item-2.png"
+  - image : "images/portfolio/item-6.png"
     project_url : "https://www.behance.net/gallery/88767105/Access-portal-Survey-experience"
-    category: "design"
+    category: "efef"
 
-  - image : "images/portfolio/item-2.png"
+  - image : "images/portfolio/item-4.png"
     project_url : "https://www.behance.net/gallery/88758331/CEREQ-Generation-Mobile"
-    category: "design"
+    category: "etet"
 
-  - image : "images/portfolio/item-2.png"
+  - image : "images/portfolio/item-7.png"
     project_url : "https://www.behance.net/gallery/88762785/research-redesign-back-office"
-    category: "design"
+    category: "et"
 
   - image : "images/portfolio/item-2.png"
     project_url : "https://www.behance.net/gallery/88760507/Bi-color"
-    category: "design"
+    category: "hjuui"
 
   - image : "images/portfolio/item-2.png"
     project_url : "https://www.behance.net/gallery/88760115/Infographie"
